source/assets/stylesheets/components/_breadcrumbs.scss
.breadcrumbs {
  padding-top: 5.5rem;
  background: url('#{$image-path}/backgrounds/subtle-patterns-dust-scratches.png') repeat-x;
  background-color: $white;
  color: $purple-darkest;
  padding-bottom: 1rem;
  border-bottom: 0.5rem solid $purple-medium-light;

  a {
    font-style: normal;
    color: $purple-medium-dark;
    text-transform: capitalize;

    &:hover {
      text-decoration: underline;
    }
  }

  .page-link-current {
    border-left: 1px $purple-darkest solid;
    padding-left: 6px;
    margin-left: 6px;

    a:first-child {
      padding-right: 0.5rem;
    }
  }

  .page-description {
    padding-top: 0.5rem;

    .accomplishments {
      .col-12:first-child {
        padding-top: 1rem;
      }

      .col-12:last-child {
        padding-bottom: 0;
      }
    }
  }

  .page-tool-description {
    overflow: hidden;
    max-height: 190px;

    div {
      display: inline;
      padding: 0.2rem;
    }
  }

  .row:first-child {
    max-width: map-get($grid-breakpoints, "xl");
  }
}

